--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-        <title>Expanse form</title>
+        <title>Trip costs calculator</title>
         <style>
             body {padding: 20px}
             .row input {width: 88%}
             form {width: 430px}
         </style>        
-        <title>Hello React!</title>
     </head>
     <body>
         <div id="example"></div>
